Fix issues with overlapping submit button and input boxes

--- a/src/style.css
+++ b/src/style.css
@@ -191,8 +191,7 @@ label {
 }
 
 .form-ui {
-  height: 120px;
-
+  margin-bottom: 30px;
 }
 
 .submit-reservation {
